--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@types/express": "^5.0.1",
+    "express": "^4.21.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
+    "openai": "^4.90.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
@@ -31,6 +34,6 @@
     "tailwindcss": "^3.3.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.3"
   }
 }
