--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "env:dev": "./scripts/switch-env.sh dev",
+    "env:prod": "./scripts/switch-env.sh prod",
+    "env:status": "./scripts/switch-env.sh status"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
